Fixes to css for images and alignment Added new mock for icon blocks Updated tests to use mocks

--- a/app/components/cms_icon_block_component/cms_icon_block_component.scss
+++ b/app/components/cms_icon_block_component/cms_icon_block_component.scss
@@ -11,6 +11,13 @@
   .cms-image {
     display: flex;
     align-items: center;
+
+    img {
+      width: 23px;
+      height: 23px;
+      object-fit: contain;
+      object-position: center;
+    }
   }
 
   &__block {
